--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@aws-sdk/client-dynamodb": "^3.306.0",
     "@aws-sdk/lib-dynamodb": "^3.306.0",
     "aws-sdk": "^2.1352.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^2.0.22"
